@@ -6,6 +6,7 @@ Key:
      * Something changed / fixed
 
 v.0.5dev (ongoing development)
+ * fix switching on/off the Load screen in lcdproc client using the menu
 
 v.0.5.1
  + config file support in lcdproc client (Andrew Foss)
